k8s/manifests/frontend/gateway-api/frontend_gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-gateway
spec:
  gatewayClassName: istio           # changed from nginx to istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
