k8s/manifests/frontend/gateway-api/frontend_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: frontend-gateway
      # maps to listener named http in backend-gateway (useful for gateways with multiple listeners)
      sectionName: http
  hostnames:
    - front.weatherly.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: $(FRONTEND_SERVICE)
          port: 80
          namespace: default
